<resources>
    <string name="app_name">CMPT276_Project_Iron</string>
    <string name="inspection_report">Inspection Report</string>
    <string name="date_of_inspection">Date of Inspection:</string>
    <string name="critical_issues_inspection">Critical Issues:</string>
    <string name="hazard_level">Hazard Level:</string>
    <string name="inspections">#Inspections</string>
    <string name="crticalissues">#CrticalIssues</string>
    <string name="hazard">hazard</string>
    <string name="non_critical_issues">Non-Critical Issues:</string>
    <string name="noncrit">#NonCrit</string>
    <string name="restaurantIconDescription">represents the restaurant icon</string>
    <string name="address_text">Address:</string>
    <string name="coordinates_text">Coordinates:</string>
    <string name="inspectionHistoryText">Inspection History:</string>
    <string name="borderDescription">separator of list from text</string>
    <string name="inspection_text">Inspection</string>
    <string name="crit_text"># Critical Issues Found:</string>
    <string name="nonCrit_text"># Non-Critical Issues Found:</string>
    <string name="date_text">Date:</string>
    <string name="hazardIconDescription">displays cur hazard level</string>
    <string name="no_inspection_text">No inspections available</string>
    <string name="no_violation_text">No violations available</string>
    <string name="restaurantExtension">Restaurant Details</string>
    <string name="days_text"> days</string>
    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string name="inspection_date">%1s %2s</string>
    <string name="inspection_date_full">%1s %2d, %3d</string>
    <string name="more_info_text">(click for more info)</string>
    <string name="violation101">Construction not authorized</string>
    <string name="violation102">Unapproved premises are operating</string>
    <string name="violation103">Lack if valid permit</string>
    <string name="violation104">Permit is hard to find</string>
    <string name="violation201">Spoiled food</string>
    <string name="violation202">Food not processed correct</string>
    <string name="violation203">Food cooling breached</string>
    <string name="violation204">Cooking/reheating process is unsafe</string>
    <string name="violation205">Cold food stored above 4 °C</string>
    <string name="violation206">Hot food stored below 60 °C</string>
    <string name="violation208">Source of food unapproved</string>
    <string name="violation209">Food not protected</string>
    <string name="violation210">Thawed process breached</string>
    <string name="violation211">Frozen food stored above -18 °C</string>
    <string name="violation212">Written form is missing</string>
    <string name="violation301">Sanitary condition not maintained</string>
    <string name="violation302">Not properly washed/sanitized</string>
    <string name="violation303">No resource for sanitary maintenance</string>
    <string name="violation304">Pests</string>
    <string name="violation305">Condition observed is not tolerable</string>
    <string name="violation306">Food premises not maintained</string>
    <string name="violation307">Design/material not suitable</string>
    <string name="violation308">Not good working order</string>
    <string name="violation309">Chemicals stored improperly</string>
    <string name="violation310">Single use items used more than once</string>
    <string name="violation311">Maintenance not complies with plans</string>
    <string name="violation312">Wrong item stored on premises</string>
    <string name="violation313">Live animal on premises</string>
    <string name="violation314">No written sanitation procedures</string>
    <string name="violation315">Lack of accurate thermometers</string>
    <string name="violation401">No adequate handwashing stations</string>
    <string name="violation402">Employee not washing hands properly</string>
    <string name="violation403">Employee lacks personal hygiene</string>
    <string name="violation404">Employee smoking close to food</string>
    <string name="violation501">Operator lacks FOODSAFE level 1</string>
    <string name="violation502">Employee lacks FOODSAFE level 1</string>
    <string name="summary">Summary</string>
    <string name="no_violations">No violations</string>
    <string name="no_restaurants_text">No Restaurants Found. Please Try Again...</string>
    <string name="restaurant_list_title">Restaurants</string>
    <string name="recent_inspection_text">Most Recent Inspection:</string>
    <string name="not_applicable_text">N/A</string>
    <string name="restaurant_address">%1s, %2s, BC, Canada</string>
    <string name="restaurant_coordinates">&lt;u>%1f, %2f&lt;/u></string>
    <string name="inspection_detail_title">Inspection Details</string>
    <string name="no_violations_available">No violations available</string>
    <string name="violation_header">Violation type</string>
    <string name="summary_header">Summary</string>
    <string name="hazard_header">Hazard level</string>
    <string-array name="custom_icon_restaurants">
        <item>McDonald</item>
        <item>Freshslice</item>
        <item>Subway</item>
        <item>Panago</item>
        <item>Starbucks</item>
        <item>Blenz</item>
        <item>Tim Hortons</item>
        <item>Booster Juice</item>
        <item>Freshii</item>
        <item>KFC</item>
    </string-array>
    <string name="initial_boot_title">Initial Boot</string>
    <string name="title_activity_maps_framework">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hazard_not_found_message">Hazard level not found</string>


    <string name="data_download_inquire">Do you want to download data?</string>
    <string name="yes_positive">YES</string>
    <string name="negative_update">UPDATE NEXT TIME</string>
    <string name="cancel">Cancel</string>
    <string name="magnifier_description">magnifier for search bar</string>
    <string name="searchBar_hint">Enter Restaurant Name</string>
    <string name="search_tittle">Search</string>
    <string name="search_options">Search Options</string>
    <string name="favourites">Favourites</string>
    <string name="low">Low</string>
    <string name="moderate">Moderate</string>
    <string name="high">High</string>
    <string name="all">All</string>
    <string name="number_of_critical_issues">Number of critical issues</string>
    <string name="save_changes">Save Changes</string>
    <string name="no_favourites">No favourites</string>
    <string name="greater_then_or_equal_to">Greater then or equal to</string>
    <string name="less_then_or_equal_to">Less then or equal to</string>
    <string name="greater_then_or_equal_to_crtical_issues">Greater then or equal to crtical issues</string>
    <string name="less_then_or_equal_to_critical_issues">Less then or equal to critical issues</string>
    <string name="greater_then_or_equal_to_critical_issues">Greater then or equal to critical issues</string>

    <string name="filter_tittle">Filter:</string>
    <string name="list_tittle">List</string>
    <string name="map_tittle">Map</string>
    <string name="restaurant_hint">Enter a Restaurant Name</string>
    <string name="options_tittle">Options</string>

    <!--- TODO TRANSLATE THESE TO OTHER LANGUAGES -->
    <string name="new_inspections">This list of your favourite restaurants has new inspections</string>
    <string name="permission_to_download_csv">Permission to download updated CSV files</string>
    <string name="reset_defaults">Reset Defaults</string>
    <string name="haz_level_tittle">Hazard Level:</string>
    <string name="dialog_message">Downloading and executing CSV files</string>
</resources>
