<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"

    tools:context=".ui.InspectionDetails">

    <TextView
        android:id="@+id/inspection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:text="@string/inspection_report"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/inspection_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/date_of_inspection"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inspection" />

    <TextView
        android:id="@+id/crit_issues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/critical_issues_inspection"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inspection_date" />

    <TextView
        android:id="@+id/hazard_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/hazard_level"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crit_issues" />

    <ListView
        android:id="@+id/listof_violations"
        android:layout_width="400dp"
        android:layout_height="350dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hazard_level"
        app:layout_constraintVertical_bias="0.036" />

    <TextView
        android:id="@+id/inspection_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/inspections"
        app:layout_constraintStart_toEndOf="@+id/inspection_date"
        app:layout_constraintTop_toBottomOf="@+id/inspection" />

    <TextView
        android:id="@+id/num_critical_issues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/crticalissues"
        app:layout_constraintStart_toEndOf="@+id/crit_issues"
        app:layout_constraintTop_toBottomOf="@+id/inspection_number" />

    <TextView
        android:id="@+id/haz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="36dp"
        android:text="@string/hazard"
        app:layout_constraintStart_toEndOf="@+id/hazard_level"
        app:layout_constraintTop_toBottomOf="@+id/num_critical_issues" />

    <TextView
        android:id="@+id/non_critical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/non_critical_issues"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crit_issues" />

    <TextView
        android:id="@+id/num_nc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/noncrit"
        app:layout_constraintStart_toEndOf="@+id/non_critical"
        app:layout_constraintTop_toBottomOf="@+id/num_critical_issues" />

</androidx.constraintlayout.widget.ConstraintLayout>