<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FilterOptions">


    <RadioGroup
        android:id="@+id/favouriteGroup"
        android:layout_width="184dp"
        android:layout_height="71dp"
        android:layout_above="@+id/hazardGroup"
        android:layout_alignEnd="@+id/hazardGroup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.162"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.133">

        <RadioButton
            android:id="@+id/no_favourite_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="getInputFavourite"
            android:text="@string/no_favourites" />

        <RadioButton
            android:id="@+id/favourites"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/favourites" />


    </RadioGroup>

    <RadioGroup
        android:id="@+id/hazardGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.303">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="getInputFavourite"
            android:text="@string/low"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.053"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.387" />

        <RadioButton
            android:id="@+id/moderate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="getInputHazard"
            android:text="@string/moderate"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.059"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.453" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="getInputHazard"
            android:text="@string/high"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.053"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.387" />

        <RadioButton
            android:id="@+id/all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="getInputHazard"
            android:text="@string/all"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.052"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.586" />

    </RadioGroup>

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hazardGroup"
        android:layout_alignStart="@+id/hazardGroup"
        android:layout_marginStart="-20dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="-103dp"
        android:layout_toStartOf="@+id/hazardGroup"
        android:text="@string/save_changes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.877" />

    <EditText
        android:id="@+id/get_crit_issue_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hazardGroup"
        android:layout_alignStart="@+id/save"
        android:layout_marginBottom="184dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/number_of_critical_issues"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.186"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.942" />

    <RadioGroup
        android:id="@+id/range"
        android:layout_width="259dp"
        android:layout_height="91dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.243"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.54">

        <RadioButton
            android:id="@+id/greater"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="findRange"
            android:text="@string/greater_then_or_equal_to_critical_issues" />

        <RadioButton
            android:id="@+id/less"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="findRange"
            android:text="@string/less_then_or_equal_to_critical_issues" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>