<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    android:background="@drawable/round_corners"
    android:orientation="horizontal"
    android:padding="15dp">

    <TextView
        android:id="@+id/violation_header"
        android:layout_width="90dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/violation_header"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/summary_header"
        android:text="@string/summary_header"
        android:layout_toEndOf="@+id/violation_header"
        android:layout_marginStart="25dp"
        android:layout_width="125dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/hazard_header"
        android:layout_height="match_parent"
        android:layout_toEndOf="@+id/summary_header"
        android:layout_marginStart="25dp"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:id="@+id/hazard_header" />
</RelativeLayout>