<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/inspectionNumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="22dp"
        android:fontFamily="serif"
        android:text="@string/inspection_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/inspectionNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="22dp"
        android:fontFamily="serif"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toEndOf="@+id/inspectionNumText"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/critText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:fontFamily="serif"
        android:text="@string/crit_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inspectionNumText" />

    <TextView
        android:id="@+id/numCritIssues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="16dp"
        android:fontFamily="serif"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toEndOf="@+id/critText"
        app:layout_constraintTop_toBottomOf="@+id/inspectionNum" />

    <TextView
        android:id="@+id/nonCritText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="16dp"
        android:fontFamily="serif"
        android:text="@string/nonCrit_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/critText" />

    <TextView
        android:id="@+id/numNonCritIssues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="16dp"
        android:fontFamily="serif"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toEndOf="@+id/nonCritText"
        app:layout_constraintTop_toBottomOf="@+id/numCritIssues" />

    <TextView
        android:id="@+id/date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="53dp"
        android:fontFamily="serif"
        android:text="@string/date_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nonCritText" />

    <TextView
        android:id="@+id/inspection_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="53dp"
        android:fontFamily="serif"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toEndOf="@+id/date_text"
        app:layout_constraintTop_toBottomOf="@+id/nonCritText" />

    <ImageView
        android:id="@+id/hazardIcon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="250dp"
        android:layout_marginTop="126dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="548dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/date_text"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:color/holo_blue_dark"
        android:contentDescription="@string/hazardIconDescription" />
</androidx.constraintlayout.widget.ConstraintLayout>